# LITES

./: .gitignore  LICENSE  PEAK_FIX_DOCUMENTATION.md  README.md  SYSTEM_SUMMARY.md  data_loader.py  demo.ipynb  demo_new.ipynb  depth_marked_output_corpus.txt  event_tokenizer.json  flat_output_corpus.txt  hierarchical_event_labeling.py  narrative_output_corpus.txt  pix2seq_model.py  pyproject.toml  qwen_text_generator.py  qwen_training.txt  test_peak_fix.py  tokenization_strategy_analysis.py  usage_examples.py
examples/: basic_usage.py
src/lites/: __init__.py  cli.py
src/lites/classification/: __init__.py  classifier.py
src/lites/detection/: __init__.py  detector.py
src/lites/formatting/: __init__.py  llm_formatter.py
src/lites/hierarchy/: __init__.py  builder.py
src/lites/utils/: __init__.py  preprocessing.py
tests/: __init__.py  test_classification.py  test_detection.py  test_formatting.py  test_hierarchy.py  test_preprocessing.py
ts2seq/: backbone.py  text_decoder.py  tokenizer.py  ts_embedding.py  ts_encoder.py
